syntax = "proto3";

package party;

import "google/api/annotations.proto";

option csharp_namespace = "Improbable.MetagameServices.Proto.Party";

message Party {
    enum Phase {
        UNKNOWN = 0;
        FORMING = 1;
        MATCHMAKING = 2;
        IN_GAME = 3;
    }
    string id = 1;
    string leader_player_id = 2;
    uint32 min_members = 3;
    uint32 max_members = 4;
    repeated string memberIds = 5;
    map<string, string> metadata = 6;
    Phase current_phase = 7;
}

message CreatePartyRequest {
    uint32 min_members = 2;
    uint32 max_members = 3;
    map<string, string> metadata = 4;
}

message CreatePartyResponse {
    string party_id = 1;
}

message GetPartyByPlayerIdRequest {
}

message GetPartyByPlayerIdResponse {
    Party party = 1;
}

message DeletePartyRequest {
}

message DeletePartyResponse {
}

message JoinPartyRequest {
    string party_id = 2;
}

message JoinPartyResponse {
    Party party = 1;
}

message LeavePartyRequest {
}

message LeavePartyResponse {
}

message KickOutPlayerRequest {
    string evicted_player_id = 2;
}

message KickOutPlayerResponse {
}

message UpdatePartyRequest {
    Party updated_party = 2;
}

message UpdatePartyResponse {
    Party party = 1;
}

service PartyService {
    rpc CreateParty (CreatePartyRequest) returns (CreatePartyResponse) {
        option (google.api.http) = {
            post: "/v1/create_party"
            body: "*"
        };
    }

    rpc GetPartyByPlayerId (GetPartyByPlayerIdRequest) returns (GetPartyByPlayerIdResponse) {
        option (google.api.http) = {
            post: "/v1/get_party_by_player_id"
        };
    }

    rpc DeleteParty (DeletePartyRequest) returns (DeletePartyResponse) {
        option (google.api.http) = {
            post: "/v1/delete_party"
        };
    }

    rpc JoinParty (JoinPartyRequest) returns (JoinPartyResponse) {
        option (google.api.http) = {
            post: "/v1/join_party/{party_id}"
        };
    }

    rpc LeaveParty (LeavePartyRequest) returns (LeavePartyResponse) {
        option (google.api.http) = {
            post: "/v1/leave_party"
        };
    }

    rpc KickOutPlayer (KickOutPlayerRequest) returns (KickOutPlayerResponse) {
        option (google.api.http) = {
            post: "/v1/kick_out_player/{evicted_player_id}"
        };
    }
   
    // Does not update the member list of the party. Modifications to the member list can be made using 
    // Join/Leave/KickOut.
    rpc UpdateParty (UpdatePartyRequest) returns (UpdatePartyResponse) {
        option (google.api.http) = {
            post: "/v1/update_party"
            body: "*"
        };
    }
}
